[ci skip] Updates

--- a/classes/normalequip.html
+++ b/classes/normalequip.html
@@ -122,7 +122,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="baseapi.html">BaseAPI</a>.<a href="baseapi.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/equip/normalEquip.ts#L16">equip/normalEquip.ts:16</a></li>
+									<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/equip/normalEquip.ts#L17">equip/normalEquip.ts:17</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <a href="normalequip.html" class="tsd-signature-type">NormalEquip</a></h4>
@@ -142,7 +142,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/equip/normalEquip.ts#L35">equip/normalEquip.ts:35</a></li>
+									<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/equip/normalEquip.ts#L36">equip/normalEquip.ts:36</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -178,7 +178,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/equip/normalEquip.ts#L48">equip/normalEquip.ts:48</a></li>
+									<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/equip/normalEquip.ts#L49">equip/normalEquip.ts:49</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -215,7 +215,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="baseapi.html">BaseAPI</a>.<a href="baseapi.html#getnodestatus">getNodeStatus</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/equip/base.ts#L37">equip/base.ts:37</a></li>
+									<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/equip/base.ts#L38">equip/base.ts:38</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -243,7 +243,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/equip/normalEquip.ts#L25">equip/normalEquip.ts:25</a></li>
+									<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/equip/normalEquip.ts#L26">equip/normalEquip.ts:26</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -275,7 +275,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="baseapi.html">BaseAPI</a>.<a href="baseapi.html#settingnodestatus">settingNodeStatus</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/equip/base.ts#L31">equip/base.ts:31</a></li>
+									<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/equip/base.ts#L32">equip/base.ts:32</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -346,6 +346,9 @@
 				<ul class="after-current">
 					<li class=" tsd-kind-class">
 						<a href="sysmenu.html" class="tsd-kind-icon">Sys<wbr>Menu</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="sysuser.html" class="tsd-kind-icon">Sys<wbr>User</a>
 					</li>
 					<li class=" tsd-kind-interface">
 						<a href="../interfaces/extrainterface.html" class="tsd-kind-icon">Extra<wbr>Interface</a>
