--- a/enums/requesturlenum.html
+++ b/enums/requesturlenum.html
@@ -82,6 +82,16 @@
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="requesturlenum.html#sys_menu_edit" class="tsd-kind-icon">SYS_<wbr>MENU_<wbr>EDIT</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="requesturlenum.html#sys_menu_list" class="tsd-kind-icon">SYS_<wbr>MENU_<wbr>LIST</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="requesturlenum.html#sys_menu_tree_list" class="tsd-kind-icon">SYS_<wbr>MENU_<wbr>TREE_<wbr>LIST</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="requesturlenum.html#sys_user_add" class="tsd-kind-icon">SYS_<wbr>USER_<wbr>ADD</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="requesturlenum.html#sys_user_change_password" class="tsd-kind-icon">SYS_<wbr>USER_<wbr>CHANGE_<wbr>PASSWORD</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="requesturlenum.html#sys_user_del" class="tsd-kind-icon">SYS_<wbr>USER_<wbr>DEL</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="requesturlenum.html#sys_user_edit" class="tsd-kind-icon">SYS_<wbr>USER_<wbr>EDIT</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="requesturlenum.html#sys_user_frozen" class="tsd-kind-icon">SYS_<wbr>USER_<wbr>FROZEN</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="requesturlenum.html#sys_user_frozen_batch" class="tsd-kind-icon">SYS_<wbr>USER_<wbr>FROZEN_<wbr>BATCH</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="requesturlenum.html#sys_user_list_page" class="tsd-kind-icon">SYS_<wbr>USER_<wbr>LIST_<wbr>PAGE</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="requesturlenum.html#sys_user_permission_list" class="tsd-kind-icon">SYS_<wbr>USER_<wbr>PERMISSION_<wbr>LIST</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="requesturlenum.html#sys_user_role" class="tsd-kind-icon">SYS_<wbr>USER_<wbr>ROLE</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="requesturlenum.html#sys_user_update_password" class="tsd-kind-icon">SYS_<wbr>USER_<wbr>UPDATE_<wbr>PASSWORD</a></li>
 							</ul>
 						</section>
 					</div>
@@ -95,7 +105,7 @@
 					<div class="tsd-signature tsd-kind-icon">AUTH_<wbr>LOGIN<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;/auth/login&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/config/constant.ts#L4">config/constant.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/config/constant.ts#L4">config/constant.ts:4</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -105,7 +115,7 @@
 					<div class="tsd-signature tsd-kind-icon">AUTH_<wbr>LOGOUT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;/auth/logout&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/config/constant.ts#L5">config/constant.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/config/constant.ts#L5">config/constant.ts:5</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -115,7 +125,7 @@
 					<div class="tsd-signature tsd-kind-icon">COMMON_<wbr>URL<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;/common&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/config/constant.ts#L3">config/constant.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/config/constant.ts#L3">config/constant.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -125,7 +135,7 @@
 					<div class="tsd-signature tsd-kind-icon">SYS_<wbr>MENU_<wbr>ADD<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;/sys/permission/add&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/config/constant.ts#L8">config/constant.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/config/constant.ts#L8">config/constant.ts:8</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -135,7 +145,7 @@
 					<div class="tsd-signature tsd-kind-icon">SYS_<wbr>MENU_<wbr>DEL<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;/sys/permission/delete&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/config/constant.ts#L10">config/constant.ts:10</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/config/constant.ts#L10">config/constant.ts:10</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -145,7 +155,7 @@
 					<div class="tsd-signature tsd-kind-icon">SYS_<wbr>MENU_<wbr>DEL_<wbr>BATCH<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;/sys/permission/deleteBatch&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/config/constant.ts#L11">config/constant.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/config/constant.ts#L11">config/constant.ts:11</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -155,7 +165,7 @@
 					<div class="tsd-signature tsd-kind-icon">SYS_<wbr>MENU_<wbr>EDIT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;/sys/permission/edit&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/config/constant.ts#L9">config/constant.ts:9</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/config/constant.ts#L9">config/constant.ts:9</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -165,7 +175,7 @@
 					<div class="tsd-signature tsd-kind-icon">SYS_<wbr>MENU_<wbr>LIST<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;/sys/permission/list&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/config/constant.ts#L7">config/constant.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/config/constant.ts#L7">config/constant.ts:7</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -175,7 +185,107 @@
 					<div class="tsd-signature tsd-kind-icon">SYS_<wbr>MENU_<wbr>TREE_<wbr>LIST<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;/sys/permission/queryTreeList&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/config/constant.ts#L12">config/constant.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/config/constant.ts#L12">config/constant.ts:12</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="sys_user_add" class="tsd-anchor"></a>
+					<h3>SYS_<wbr>USER_<wbr>ADD</h3>
+					<div class="tsd-signature tsd-kind-icon">SYS_<wbr>USER_<wbr>ADD<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;/sys/user/add&quot;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/config/constant.ts#L15">config/constant.ts:15</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="sys_user_change_password" class="tsd-anchor"></a>
+					<h3>SYS_<wbr>USER_<wbr>CHANGE_<wbr>PASSWORD</h3>
+					<div class="tsd-signature tsd-kind-icon">SYS_<wbr>USER_<wbr>CHANGE_<wbr>PASSWORD<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;/sys/user/changPassword&quot;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/config/constant.ts#L21">config/constant.ts:21</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="sys_user_del" class="tsd-anchor"></a>
+					<h3>SYS_<wbr>USER_<wbr>DEL</h3>
+					<div class="tsd-signature tsd-kind-icon">SYS_<wbr>USER_<wbr>DEL<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;/sys/user/delete&quot;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/config/constant.ts#L17">config/constant.ts:17</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="sys_user_edit" class="tsd-anchor"></a>
+					<h3>SYS_<wbr>USER_<wbr>EDIT</h3>
+					<div class="tsd-signature tsd-kind-icon">SYS_<wbr>USER_<wbr>EDIT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;/sys/user/edit&quot;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/config/constant.ts#L16">config/constant.ts:16</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="sys_user_frozen" class="tsd-anchor"></a>
+					<h3>SYS_<wbr>USER_<wbr>FROZEN</h3>
+					<div class="tsd-signature tsd-kind-icon">SYS_<wbr>USER_<wbr>FROZEN<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;/sys/user/frozen&quot;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/config/constant.ts#L19">config/constant.ts:19</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="sys_user_frozen_batch" class="tsd-anchor"></a>
+					<h3>SYS_<wbr>USER_<wbr>FROZEN_<wbr>BATCH</h3>
+					<div class="tsd-signature tsd-kind-icon">SYS_<wbr>USER_<wbr>FROZEN_<wbr>BATCH<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;/sys/user/frozenBatch&quot;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/config/constant.ts#L20">config/constant.ts:20</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="sys_user_list_page" class="tsd-anchor"></a>
+					<h3>SYS_<wbr>USER_<wbr>LIST_<wbr>PAGE</h3>
+					<div class="tsd-signature tsd-kind-icon">SYS_<wbr>USER_<wbr>LIST_<wbr>PAGE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;/sys/user/list&quot;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/config/constant.ts#L14">config/constant.ts:14</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="sys_user_permission_list" class="tsd-anchor"></a>
+					<h3>SYS_<wbr>USER_<wbr>PERMISSION_<wbr>LIST</h3>
+					<div class="tsd-signature tsd-kind-icon">SYS_<wbr>USER_<wbr>PERMISSION_<wbr>LIST<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;//sys/permission/getUserPermission&quot;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/config/constant.ts#L23">config/constant.ts:23</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="sys_user_role" class="tsd-anchor"></a>
+					<h3>SYS_<wbr>USER_<wbr>ROLE</h3>
+					<div class="tsd-signature tsd-kind-icon">SYS_<wbr>USER_<wbr>ROLE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;/sys/user/queryUserRole&quot;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/config/constant.ts#L18">config/constant.ts:18</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="sys_user_update_password" class="tsd-anchor"></a>
+					<h3>SYS_<wbr>USER_<wbr>UPDATE_<wbr>PASSWORD</h3>
+					<div class="tsd-signature tsd-kind-icon">SYS_<wbr>USER_<wbr>UPDATE_<wbr>PASSWORD<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;/sys/user/updatePassword&quot;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/config/constant.ts#L22">config/constant.ts:22</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -223,6 +333,36 @@
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
 								<a href="requesturlenum.html#sys_menu_tree_list" class="tsd-kind-icon">SYS_<wbr>MENU_<wbr>TREE_<wbr>LIST</a>
 							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="requesturlenum.html#sys_user_add" class="tsd-kind-icon">SYS_<wbr>USER_<wbr>ADD</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="requesturlenum.html#sys_user_change_password" class="tsd-kind-icon">SYS_<wbr>USER_<wbr>CHANGE_<wbr>PASSWORD</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="requesturlenum.html#sys_user_del" class="tsd-kind-icon">SYS_<wbr>USER_<wbr>DEL</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="requesturlenum.html#sys_user_edit" class="tsd-kind-icon">SYS_<wbr>USER_<wbr>EDIT</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="requesturlenum.html#sys_user_frozen" class="tsd-kind-icon">SYS_<wbr>USER_<wbr>FROZEN</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="requesturlenum.html#sys_user_frozen_batch" class="tsd-kind-icon">SYS_<wbr>USER_<wbr>FROZEN_<wbr>BATCH</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="requesturlenum.html#sys_user_list_page" class="tsd-kind-icon">SYS_<wbr>USER_<wbr>LIST_<wbr>PAGE</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="requesturlenum.html#sys_user_permission_list" class="tsd-kind-icon">SYS_<wbr>USER_<wbr>PERMISSION_<wbr>LIST</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="requesturlenum.html#sys_user_role" class="tsd-kind-icon">SYS_<wbr>USER_<wbr>ROLE</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="requesturlenum.html#sys_user_update_password" class="tsd-kind-icon">SYS_<wbr>USER_<wbr>UPDATE_<wbr>PASSWORD</a>
+							</li>
 						</ul>
 					</li>
 				</ul>
@@ -238,6 +378,9 @@
 					</li>
 					<li class=" tsd-kind-class">
 						<a href="../classes/sysmenu.html" class="tsd-kind-icon">Sys<wbr>Menu</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="../classes/sysuser.html" class="tsd-kind-icon">Sys<wbr>User</a>
 					</li>
 					<li class=" tsd-kind-interface">
 						<a href="../interfaces/extrainterface.html" class="tsd-kind-icon">Extra<wbr>Interface</a>
