--- a/interfaces/extrainterface.html
+++ b/interfaces/extrainterface.html
@@ -100,7 +100,7 @@
 					<div class="tsd-signature tsd-kind-icon">headers<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/ajax/action.ts#L8">ajax/action.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/ajax/action.ts#L8">ajax/action.ts:8</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -110,7 +110,7 @@
 					<div class="tsd-signature tsd-kind-icon">is<wbr>Data<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">false</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">true</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/ajax/action.ts#L7">ajax/action.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/ajax/action.ts#L7">ajax/action.ts:7</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -140,6 +140,9 @@
 					</li>
 					<li class=" tsd-kind-class">
 						<a href="../classes/sysmenu.html" class="tsd-kind-icon">Sys<wbr>Menu</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="../classes/sysuser.html" class="tsd-kind-icon">Sys<wbr>User</a>
 					</li>
 				</ul>
 				<ul class="current">
