--- a/interfaces/normalequipparams.html
+++ b/interfaces/normalequipparams.html
@@ -100,7 +100,7 @@
 					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/equip/normalEquip.ts#L10">equip/normalEquip.ts:10</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/equip/normalEquip.ts#L11">equip/normalEquip.ts:11</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -110,7 +110,7 @@
 					<div class="tsd-signature tsd-kind-icon">obox<wbr>Serial<wbr>Id<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/equip/normalEquip.ts#L8">equip/normalEquip.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/equip/normalEquip.ts#L9">equip/normalEquip.ts:9</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -120,7 +120,7 @@
 					<div class="tsd-signature tsd-kind-icon">obox_<wbr>serial_<wbr>id<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/equip/normalEquip.ts#L9">equip/normalEquip.ts:9</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/equip/normalEquip.ts#L10">equip/normalEquip.ts:10</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -130,7 +130,7 @@
 					<div class="tsd-signature tsd-kind-icon">page<wbr>No<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/equip/normalEquip.ts#L5">equip/normalEquip.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/equip/normalEquip.ts#L6">equip/normalEquip.ts:6</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -140,7 +140,7 @@
 					<div class="tsd-signature tsd-kind-icon">page<wbr>Size<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/equip/normalEquip.ts#L6">equip/normalEquip.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/equip/normalEquip.ts#L7">equip/normalEquip.ts:7</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -150,7 +150,7 @@
 					<div class="tsd-signature tsd-kind-icon">serial<wbr>Id<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/equip/normalEquip.ts#L7">equip/normalEquip.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/equip/normalEquip.ts#L8">equip/normalEquip.ts:8</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -180,6 +180,9 @@
 					</li>
 					<li class=" tsd-kind-class">
 						<a href="../classes/sysmenu.html" class="tsd-kind-icon">Sys<wbr>Menu</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="../classes/sysuser.html" class="tsd-kind-icon">Sys<wbr>User</a>
 					</li>
 					<li class=" tsd-kind-interface">
 						<a href="extrainterface.html" class="tsd-kind-icon">Extra<wbr>Interface</a>
