--- a/classes/auth.html
+++ b/classes/auth.html
@@ -113,7 +113,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/auth/index.ts#L6">auth/index.ts:6</a></li>
+									<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/auth/index.ts#L7">auth/index.ts:7</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <a href="auth.html" class="tsd-signature-type">Auth</a></h4>
@@ -133,7 +133,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/auth/index.ts#L14">auth/index.ts:14</a></li>
+									<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/auth/index.ts#L15">auth/index.ts:15</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -170,7 +170,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/auth/index.ts#L21">auth/index.ts:21</a></li>
+									<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/auth/index.ts#L22">auth/index.ts:22</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -223,6 +223,9 @@
 					</li>
 					<li class=" tsd-kind-class">
 						<a href="sysmenu.html" class="tsd-kind-icon">Sys<wbr>Menu</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="sysuser.html" class="tsd-kind-icon">Sys<wbr>User</a>
 					</li>
 					<li class=" tsd-kind-interface">
 						<a href="../interfaces/extrainterface.html" class="tsd-kind-icon">Extra<wbr>Interface</a>
