--- a/classes/baseapi.html
+++ b/classes/baseapi.html
@@ -118,7 +118,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/equip/base.ts#L26">equip/base.ts:26</a></li>
+									<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/equip/base.ts#L27">equip/base.ts:27</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <a href="baseapi.html" class="tsd-signature-type">BaseAPI</a></h4>
@@ -138,7 +138,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/equip/base.ts#L37">equip/base.ts:37</a></li>
+									<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/equip/base.ts#L38">equip/base.ts:38</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -166,7 +166,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/equip/base.ts#L31">equip/base.ts:31</a></li>
+									<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/equip/base.ts#L32">equip/base.ts:32</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -228,6 +228,9 @@
 					</li>
 					<li class=" tsd-kind-class">
 						<a href="sysmenu.html" class="tsd-kind-icon">Sys<wbr>Menu</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="sysuser.html" class="tsd-kind-icon">Sys<wbr>User</a>
 					</li>
 					<li class=" tsd-kind-interface">
 						<a href="../interfaces/extrainterface.html" class="tsd-kind-icon">Extra<wbr>Interface</a>
