--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
 					<li class=" tsd-kind-class">
 						<a href="classes/sysmenu.html" class="tsd-kind-icon">Sys<wbr>Menu</a>
 					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/sysuser.html" class="tsd-kind-icon">Sys<wbr>User</a>
+					</li>
 					<li class=" tsd-kind-interface">
 						<a href="interfaces/extrainterface.html" class="tsd-kind-icon">Extra<wbr>Interface</a>
 					</li>
