--- a/interfaces/sysmenuparams.html
+++ b/interfaces/sysmenuparams.html
@@ -109,7 +109,7 @@
 					<div class="tsd-signature tsd-kind-icon">always<wbr>Show<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/system/menu.ts#L14">system/menu.ts:14</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/system/menu.ts#L15">system/menu.ts:15</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -119,7 +119,7 @@
 					<div class="tsd-signature tsd-kind-icon">component<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/system/menu.ts#L8">system/menu.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/system/menu.ts#L9">system/menu.ts:9</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -129,7 +129,7 @@
 					<div class="tsd-signature tsd-kind-icon">hidden<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/system/menu.ts#L15">system/menu.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/system/menu.ts#L16">system/menu.ts:16</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -139,7 +139,7 @@
 					<div class="tsd-signature tsd-kind-icon">icon<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/system/menu.ts#L12">system/menu.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/system/menu.ts#L13">system/menu.ts:13</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -149,7 +149,7 @@
 					<div class="tsd-signature tsd-kind-icon">internal<wbr>OrExternal<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/system/menu.ts#L18">system/menu.ts:18</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/system/menu.ts#L19">system/menu.ts:19</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -159,7 +159,7 @@
 					<div class="tsd-signature tsd-kind-icon">keep<wbr>Alive<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/system/menu.ts#L17">system/menu.ts:17</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/system/menu.ts#L18">system/menu.ts:18</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -169,7 +169,7 @@
 					<div class="tsd-signature tsd-kind-icon">menu<wbr>Type<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/system/menu.ts#L4">system/menu.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/system/menu.ts#L5">system/menu.ts:5</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -179,7 +179,7 @@
 					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/system/menu.ts#L5">system/menu.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/system/menu.ts#L6">system/menu.ts:6</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -189,7 +189,7 @@
 					<div class="tsd-signature tsd-kind-icon">parent<wbr>Id<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/system/menu.ts#L6">system/menu.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/system/menu.ts#L7">system/menu.ts:7</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -199,7 +199,7 @@
 					<div class="tsd-signature tsd-kind-icon">perms<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/system/menu.ts#L10">system/menu.ts:10</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/system/menu.ts#L11">system/menu.ts:11</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -209,7 +209,7 @@
 					<div class="tsd-signature tsd-kind-icon">redirect<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/system/menu.ts#L9">system/menu.ts:9</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/system/menu.ts#L10">system/menu.ts:10</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -219,7 +219,7 @@
 					<div class="tsd-signature tsd-kind-icon">route<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/system/menu.ts#L16">system/menu.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/system/menu.ts#L17">system/menu.ts:17</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -229,7 +229,7 @@
 					<div class="tsd-signature tsd-kind-icon">sort<wbr>No<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/system/menu.ts#L13">system/menu.ts:13</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/system/menu.ts#L14">system/menu.ts:14</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -239,7 +239,7 @@
 					<div class="tsd-signature tsd-kind-icon">status<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/system/menu.ts#L11">system/menu.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/system/menu.ts#L12">system/menu.ts:12</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -249,7 +249,7 @@
 					<div class="tsd-signature tsd-kind-icon">url<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/b0e01e7/src/system/menu.ts#L7">system/menu.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/ob-cloud/iot-service-api/blob/4242033/src/system/menu.ts#L8">system/menu.ts:8</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -279,6 +279,9 @@
 					</li>
 					<li class=" tsd-kind-class">
 						<a href="../classes/sysmenu.html" class="tsd-kind-icon">Sys<wbr>Menu</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="../classes/sysuser.html" class="tsd-kind-icon">Sys<wbr>User</a>
 					</li>
 					<li class=" tsd-kind-interface">
 						<a href="extrainterface.html" class="tsd-kind-icon">Extra<wbr>Interface</a>
